# fake-chat-example

./: README.md  chat.py  pyproject.toml
tests/: conftest.py  test_chat.py
